# actix-demo

backend/: .env  Cargo.toml  diesel.toml
backend/migrations/2024-12-19-225831_create_tasks/: up.sql
backend/src/: lib.rs  main.rs  models.rs  schema.rs
frontend/: bun.lockb
frontend/src/: Hello.tsx  ShowTasks.tsx  Task.css  Task.tsx  TaskForm.css  TaskForm.tsx  index.css  main.tsx
