[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "backend"

[dependencies]
diesel = { version = "2.2.6", features = ["postgres"] }
dotenvy = "0.15.7"
tokio = { version = "1.42.0", features = ["full"] }
actix-web = "4.9.0"
actix-cors = "0.7.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
tokio-postgres = "0.7.12"
